--- a/Templates/wijzig_redacteuren.html.jinja
+++ b/Templates/wijzig_redacteuren.html.jinja
@@ -3,20 +3,22 @@
 
     <main class="container">
         <h1>Wijzig Redacteur</h1>
+
+        {% if redacteur %}
         <form class="redacteuren" method="post" action="{{ url_for('update_redacteur', user_id=redacteur[0]) }}">
             <table>
                 <tbody>
                     <tr>
                         <td><label for="name">Naam:</label></td>
-                        <td><input type="text" id="name" name="name" value="{{ redacteur[1] }}" required></td>
+                        <td><input type="text" id="name" name="name" value="{{ redacteur[2] }}" required></td>
                     </tr>
                     <tr>
                         <td><label for="email">Email/Login:</label></td>
-                        <td><input type="email" id="email" name="email" value="{{ redacteur[2] }}" required></td>
+                        <td><input type="text" id="email" name="email" value="{{ redacteur[1] }}" required></td>
                     </tr>
                     <tr>
                         <td><label for="password">Wachtwoord:</label></td>
-                        <td><input type="password" id="password" name="password" placeholder="Vul nieuw wachtwoord in" required></td>
+                        <td><input type="text" id="password" name="password" placeholder="Vul nieuw wachtwoord in" required></td>
                     </tr>
                     <tr>
                         <td><label for="is_admin">Is Admin?</label></td>
@@ -29,11 +31,15 @@
             </div>
         </form>
         <br>
-        <div class="button">
-            <form method="post" action="{{ url_for('delete_redacteur', user_id=redacteur[0]) }}">
-                <button type="submit" class="button" onclick="return confirm('Weet je zeker dat je deze redacteur wilt verwijderen?');">Verwijder</button>
-            </form>
-        </div>
+        <form method="post" action="{{ url_for('delete_redacteur', user_id=redacteur[0]) }}">
+            <button type="submit" class="button" onclick="return confirm('Weet je zeker dat je deze redacteur wilt verwijderen?');">
+                Verwijder
+            </button>
+        </form>
+        {% else %}
+        <p>Fout: Redacteur niet gevonden!</p>
+        {% endif %}
+
     </main>
 
 {% endblock %}
