base footer updated

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -37,7 +37,7 @@
 {%  block main %}
 {% endblock %}
 
-<footer><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
+<footer></footer>
 
 </body>
 </html>
