Flash message added

--- a/Templates/redacteur.html.jinja
+++ b/Templates/redacteur.html.jinja
@@ -3,6 +3,17 @@
 
     <main class="container">
         <h1>Redacteuren</h1>
+     {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </div>
+            {% endif %}
+        {% endwith %}
         <table class="redacteuren">
             <thead>
                 <tr>
