Aanpassingen + button doorverwezen.

--- a/Templates/vraag_taxonomie_wijzigen.html
+++ b/Templates/vraag_taxonomie_wijzigen.html
@@ -64,7 +64,7 @@
 {%  block main %}
 {% endblock %}
 
-<footer style="text-align: center;"><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
+<footer style="text-align: center;"><a href="{{ url_for('toetsvragen') }}"><strong>Keer terug naar home pagina</strong></a></footer>
 
 </body>
 </html>
