--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -2,6 +2,17 @@
 {% block main %}
 
 <h1>Inloggen</h1>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </div>
+            {% endif %}
+        {% endwith %}
 <div class="login_form">
                 <form action="/" method="POST">
             <div class="field">
