--- a/voorbeeld_uitwerking/templates/questions.html.jinja
+++ b/voorbeeld_uitwerking/templates/questions.html.jinja
@@ -1,4 +1,4 @@
-{% extends "base.html.jinja" %}
+{% extends "base.html.jinja.jinja" %}
 {% block content %}
         <h1>Toon alle vragen</h1>
         <table class="table">
