--- a/voorbeeld_uitwerking/templates/question.html.jinja
+++ b/voorbeeld_uitwerking/templates/question.html.jinja
@@ -1,4 +1,4 @@
-{% extends "base.html.jinja" %}
+{% extends "base.html.jinja.jinja" %}
 {% block content %}
         <h1>Vraag indexeren, stap 1/2</h1>
         <p>Vraag: <i>{{ question.question }}</i></p>
