--- a/Templates/prompt_toevoegen.html
+++ b/Templates/prompt_toevoegen.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html.jinja" %}
 {% block main %}
 <main class="container">
     <h1>Nieuwe prompt toevoegen</h1>
