--- a/Templates/inloggen.html.jinja
+++ b/Templates/inloggen.html.jinja
@@ -14,7 +14,7 @@
             {% endif %}
         {% endwith %}
 <div class="login_form">
-                <form action="/" method="POST">
+                <form action="/inlog" method="POST">
             <div class="field">
                 <label for="username">Gebruikersnaam</label>
                 <input type="text" id="username" name="username" placeholder="Uw gebruikersnaam" value="{{ingevulde_gebruikersnaam|default('') }}" required="">
