--- a/Templates/nieuwe_redacteur.html
+++ b/Templates/nieuwe_redacteur.html
@@ -33,7 +33,7 @@
 </header>
 <h1>Nieuwe redacteur</h1>
 <div class="login_form">
-                <form action="/nr" method="POST">
+                <form action="/" method="POST">
             <div class="field">
                 <label for="username">Gebruikersnaam</label>
                 <input type="text" id="username" name="username" placeholder="Uw gebruikersnaam" value="{{gebruikersnaam|default('')}}" required="">
