--- a/Templates/inloggen.html.jinja
+++ b/Templates/inloggen.html.jinja
@@ -21,7 +21,7 @@
             </div>
             <div class="field">
                 <label for="password">Wachtwoord</label>
-                <input type="password" id="password" name="password" placeholder="Uw wachtwoord" value="{{inegvulde_wachtwoord|default('') }}" required="">
+                <input type="password" id="password" name="password" placeholder="Uw wachtwoord" value="{{ingevulde_wachtwoord|default('') }}" required="">
             </div>
             <button class="button" type="submit">Inloggen</button>
         </form>
