--- a/Templates/nieuwe_redacteur.html
+++ b/Templates/nieuwe_redacteur.html
@@ -24,10 +24,10 @@
                 <li><a href="https://www.test-correct.nl/overons">Over</a></li>
             </ul>
         </div>
-
         <div class="button-container">
-            <a href="https://www.test-correct.nl/welcome" class="button one">Probeer nu</a>
-            <a href="https://welcome.test-correct.nl/login" class="button two">Log in</a>
+            <a href="http://127.0.0.1:5000/redacteur" class="button one">redacteuren</a>
+            <a href="http://127.0.0.1:5000/toetsvragen" class="button two">toetsvragen</a>
+            <a href="http://127.0.0.1:5000/ai_prompts" class="button one">ai-prompts</a>
         </div>
     </div>
 </header>
