--- a/Templates/nieuwe_redacteur.html
+++ b/Templates/nieuwe_redacteur.html
@@ -14,20 +14,11 @@
                 <img src="../static/assets/logo/testcorrect-logo.svg" alt="Logo">
             </a>
         </div>
-
-        <div class="menu-container">
-            <ul class="main-navigation">
-                <li><a href="#">Oplossingen</a></li>
-                <li><a href="https://www.test-correct.nl/toetsplatform">Toetsplatform</a></li>
-                <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
-                <li><a href="https://www.test-correct.nl/support">Support</a></li>
-                <li><a href="https://www.test-correct.nl/overons">Over</a></li>
-            </ul>
-        </div>
         <div class="button-container">
-            <a href="http://127.0.0.1:5000/redacteur" class="button one">redacteuren</a>
-            <a href="http://127.0.0.1:5000/toetsvragen" class="button two">toetsvragen</a>
-            <a href="http://127.0.0.1:5000/ai_prompts" class="button one">ai-prompts</a>
+            <a href="http://127.0.0.1:5000/inlog" class="button one">inloggen</a>
+            <a href="http://127.0.0.1:5000/redacteur" class="button two">redacteuren</a>
+            <a href="http://127.0.0.1:5000/toetsvragen" class="button three">toetsvragen</a>
+            <a href="http://127.0.0.1:5000/ai_prompts" class="button four">ai-prompts</a>
         </div>
     </div>
 </header>
