--- a/Templates/nieuwe_redacteur.html
+++ b/Templates/nieuwe_redacteur.html
@@ -15,10 +15,10 @@
             </a>
         </div>
         <div class="button-container">
-            <a href="http://127.0.0.1:5000/inlog" class="button one">inloggen</a>
-            <a href="http://127.0.0.1:5000/redacteur" class="button two">redacteuren</a>
-            <a href="http://127.0.0.1:5000/toetsvragen" class="button three">toetsvragen</a>
-            <a href="http://127.0.0.1:5000/ai_prompts" class="button four">ai-prompts</a>
+            <a href="http://127.0.0.1:5000/inlog" class="button">inloggen</a>
+            <a href="http://127.0.0.1:5000/redacteur" class="button">redacteuren</a>
+            <a href="http://127.0.0.1:5000/toetsvragen" class="button">toetsvragen</a>
+            <a href="http://127.0.0.1:5000/ai_prompts" class="button">ai-prompts</a>
         </div>
     </div>
 </header>
