--- a/static/css/nieuwe_redacteur.css
+++ b/static/css/nieuwe_redacteur.css
@@ -53,35 +53,24 @@ body {
             font-family: 'Nunito', sans-serif;
         }
 
-        .button-container {
-            display: flex;
-            gap: 50px;
-            margin-left: 15px;
+        .button-container a{
             color: white;
-            background-color: #3dbb56;
+            background-color: #3DBB56;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
+            font-size: 20px;
+            text-align: center;
+            transition: background-color 0.3s ease;
         }
 
-       .button-container .button one {
-            background-color: #3dbb56;
-        }
-
-       .button-container .button two {
-            background-color: #3dbb56;
-        }
-
-       .button-container .button three {
-            background-color: #3dbb56;
-        }
-
-       .button-container .button four {
-            background-color: #3dbb56;
-        }
 
         .button-container a:hover {
             background-color: #2e9e47;
+        }
+
+       .button-container .button {
+            background-color: #3dbb56;
         }
 
         .toggle-switch {
