--- a/Templates/base.html.jinja
+++ b/Templates/base.html.jinja
@@ -16,20 +16,11 @@
                 <img src="../static/assets/logo/testcorrect-logo.svg" alt="Logo">
             </a>
         </div>
-
-        <div class="menu-container">
-            <ul class="main-navigation">
-                <li><a href="#">Oplossingen</a></li>
-                <li><a href="https://www.test-correct.nl/toetsplatform">Toetsplatform</a></li>
-                <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
-                <li><a href="https://www.test-correct.nl/support">Support</a></li>
-                <li><a href="https://www.test-correct.nl/overons">Over</a></li>
-            </ul>
-        </div>
-
         <div class="button-container">
-            <a href="https://www.test-correct.nl/welcome" class="button-1">Probeer nu</a>
-            <a href="https://welcome.test-correct.nl/login" class="button-2">Log in</a>
+            <a href="http://127.0.0.1:5000/nieuwe_redacteur" class="button">redacteur toevoegen</a>
+            <a href="http://127.0.0.1:5000/redacteur" class="button">redacteuren</a>
+            <a href="http://127.0.0.1:5000/toetsvragen" class="button">toetsvragen</a>
+            <a href="http://127.0.0.1:5000/ai_prompts" class="button">ai-prompts</a>
         </div>
     </div>
 </header>
