--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -2,13 +2,7 @@
 {% block main %}
 
 <body>
-    <header class="header">
-        <nav>
-            <a href="/toetsvragen" class="button">Vragen</a>
-            <a href="/ai_prompts" class="button">AI Prompts</a>
-            <a href="/redacteur" class="button active">Redacteuren</a>
-        </nav>
-    </header>
+    <header class="header"></header>
     <main class="container">
         <h1>AI Prompts</h1>
         <table class="AI Prompts">
